ash Login screen: Fix a regression with SmartLock login.

In previous implementations of the login screen, a user with SmartLock
enabled could press return with an empty password field in order to
authenticate. This behavior appears to not have been carried over in the
newer Views implementation.

The fix is to special case the auth attempt and divert the attempt to
the SmartLock flow in the case where the user has tap-to-unlock and the
password field is empty.

R=xiyuan@chromium.org

Bug: 818400
Test: LoginAuthUserViewUnittest.PressReturnWithTapToUnlockEnabled
Change-Id: I1ecaba0d285fd43b231ca8028c19b0682f073b77
Reviewed-on: https://chromium-review.googlesource.com/1013398
Commit-Queue: James Hawkins <jhawkins@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551016}
Former-commit-id: f3bc4da52338572d88e2e608068ee6e6f483faa0